--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -72,18 +72,21 @@
 .text_adder {
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
 }
 .text_adder textarea {
+    box-sizing: border-box;
+    padding: 10px 5px;
     width: 550px;
-    height: 30px;
     margin: 20px;
     background-color: #cdcdec;
     border-radius: 4px;
+    resize: none;
 }
 .text_adder button {
-    height: 30px;
-    width: 50px;
-    margin-bottom: 20px;
+    padding: 15px;
     background-color: #cdcdec;
+    border: none;
+    outline: none;
+    border-radius: 4px;
 }
