Lesson 59 Preloader fixed and interface changed a little Everything doesn't work when you load users page though

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
     grid-area: header;
-    background: linear-gradient(gold, white)
+    background: linear-gradient(#0c2848, rgba(23, 23, 51, 0.34))
 
 }
 
