--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,12 @@
     margin: 0 auto;
     display: grid;
 
-    width: 1200px;
-    max-width: 1200px;
+    width: 1600px;
+    max-width: 1600px;
+    background: radial-gradient(#0c2848, #17181F);
 
-    font-family: Montserrat, sans-serif;
+    font-family: "Roboto Thin", sans-serif;
+    font-size: 18px;
 
 
     grid-template-areas:
@@ -19,7 +21,12 @@
 }
 
 .app-wrapper-content {
+    margin: 0 auto;
+    width: 1200px;
     /*grid-area: c;*/
-    background-color: rgb(122, 129, 147);
+    background: rgba(122, 129, 147, 0.1);
     display: flex;
+    box-shadow: 5px 5px 5px inset rgba(23, 24, 31, .5),
+    inset 0 0 20px rgba(23, 24, 31, .2),
+    inset 0 0 25px rgba(23, 24, 31, .05);
 }
