--- a/src/components/NavBar/Navbar.module.css
+++ b/src/components/NavBar/Navbar.module.css
@@ -1,8 +1,8 @@
 .nav {
     grid-area: nav;
-    background-color: rgb(122, 129, 147);
+    background-color: transparent;
     padding: 5px;
-    width: 200px;
+    width: 250px;
 }
 
 .item:hover {
@@ -12,16 +12,17 @@
 }
 
 .item {
+    margin-left: 25px;
+    margin-top: 10px;
     padding: 10px;
-    background-color: rgb(41, 41, 77);
-    margin: 10px;
+    background-color: rgba(25, 25, 38, 0.32);
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     cursor: pointer;
     color: white;
-    border-radius: 10px;
-    opacity: 90%;
+    border-radius: 5px;
+    opacity: 100%;
 
 
 }
@@ -33,6 +34,9 @@
 
 .item a.active {
     color: gold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .friends {
