--- a/src/pages/Users/Users.module.css
+++ b/src/pages/Users/Users.module.css
@@ -1,14 +1,40 @@
+.pagesWrapper{
+    margin: 0 auto;
+
+}
 .pages {
     color: black;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 10px;
+
 }
 .pages span {
     margin: 10px;
+    cursor: pointer;
 }
 .pages .selectedPage {
     font-weight: bold;
     color: gold;
 }
+
+.pages .page {
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    flex-direction: column;
+    position: relative;
+}
+ .preloader {
+     position: absolute;
+     top: 0;
+     bottom: 0;
+     left: 0;
+     right: 0;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+ }
